tests/fixtures/invalid/dict_bitand_bool.py
# Cannot bitwise AND Dict[str, int] and Bool
x: dict[str, int] = {"a": 1} & True
